auth: use the header passed by the api gateway
This removes the ssl certificate check and the tool in the path check
as those are already handled by the api-gateway.

Bug: T367180
